tests/result/fail/types/volatile-void-error.fail.cpp
#include "tim/result/Result.hpp"


int main() { tim::Result<int, volatile void> r; }
